# krikit-agent-ops

./: .gitignore  AGENTS.md  README.md  justfile  krikit-agent-ops.cabal
app/health/: Main.hs
app/krikit-monitor/: Main.hs
app/regen-cross-reference-index/: Main.hs
app/regen-repo-inventory/: Main.hs
app/regen-summary/: Main.hs
app/regen-system-state-mini/: Main.hs
app/restart/: Main.hs
app/smoke/: Main.hs
app/summary/: Main.hs
app/update/: Main.hs
app/update-status/: Main.hs
app/verify-llm-channel-consistency/: Main.hs
app/verify-reading-order/: Main.hs
app/verify-repo-inventory/: Main.hs
app/versions/: Main.hs
src/Krikit/: Version.hs
src/Krikit/Agent/Ops/: Agent.hs  Config.hs  Service.hs  Units.hs  Version.hs
src/Krikit/Agent/Ops/CrossReferenceIndex/: Run.hs
src/Krikit/Agent/Ops/Effect/: Log.hs  Probe.hs  Proc.hs  Telegram.hs
src/Krikit/Agent/Ops/Health/: Run.hs
src/Krikit/Agent/Ops/Monitor/: Check.hs  Digest.hs  Run.hs  State.hs
src/Krikit/Agent/Ops/Regen/: AutoDisable.hs  Banner.hs  FsWalk.hs  MarkdownExtract.hs  Write.hs
src/Krikit/Agent/Ops/RegenSummary/: Run.hs
src/Krikit/Agent/Ops/RepoInventory/: Run.hs
src/Krikit/Agent/Ops/Restart/: Run.hs
src/Krikit/Agent/Ops/Smoke/: Config.hs  Report.hs  Run.hs  Tier.hs
src/Krikit/Agent/Ops/Summary/: Run.hs
src/Krikit/Agent/Ops/SystemStateMini/: Run.hs
src/Krikit/Agent/Ops/Update/: Run.hs
src/Krikit/Agent/Ops/UpdateStatus/: MacOS.hs  Refresh.hs  Report.hs  Run.hs  Tool.hs  Version.hs
src/Krikit/Agent/Ops/Verify/: Common.hs  LlmChannelConsistency.hs  ReadingOrder.hs  RepoInventory.hs
src/Krikit/Agent/Ops/Versions/: Run.hs
test/: Spec.hs
test/Krikit/Agent/Ops/: ConfigSpec.hs
test/Krikit/Agent/Ops/CrossReferenceIndex/: RunSpec.hs
test/Krikit/Agent/Ops/Effect/: TelegramSpec.hs
test/Krikit/Agent/Ops/Monitor/: CheckSpec.hs  DigestSpec.hs  StateSpec.hs
test/Krikit/Agent/Ops/Regen/: AutoDisableSpec.hs  MarkdownExtractSpec.hs  WriteSpec.hs
test/Krikit/Agent/Ops/RegenSummary/: RunSpec.hs
test/Krikit/Agent/Ops/RepoInventory/: RunSpec.hs
test/Krikit/Agent/Ops/Smoke/: RunSpec.hs  TierSpec.hs
test/Krikit/Agent/Ops/UpdateStatus/: MacOSSpec.hs  RunSpec.hs  VersionSpec.hs
test/Krikit/Agent/Ops/Verify/: CommonSpec.hs  LlmChannelConsistencySpec.hs  ReadingOrderSpec.hs  RepoInventorySpec.hs
