cabal-version:      3.0
name:               krikit-agent-ops
version:            0.2.0.0
synopsis:           Ops tooling for krikit agent hosts
description:
    CLI binaries for maintaining, monitoring, and smoke-testing the krikit
    agent stack. Each tool is a separate executable; shared logic lives in
    the library.
author:             Eric <krikitclaw@krikit.ai>
maintainer:         krikitclaw@krikit.ai
license:            BSD-3-Clause
build-type:         Simple
tested-with:        GHC ==9.14.1

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-export-lists
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints
        -Wunused-packages

common deps
    build-depends:
        , base                ^>=4.22
        , text                ^>=2.1
        , bytestring          ^>=0.12
        , containers          >=0.6  && <0.9
        , directory           ^>=1.3
        , filepath            ^>=1.5
        , aeson               >=2.2  && <2.3
        , effectful           ^>=2.6
        , effectful-th        ^>=1.0
        , http-client         ^>=0.7
        , http-client-tls     ^>=0.3
        , http-types          ^>=0.12
        , time                >=1.12 && <1.15
        , typed-process       ^>=0.2

library
    import:           warnings, deps
    exposed-modules:
        Krikit.Agent.Ops.Agent
        Krikit.Agent.Ops.Config
        Krikit.Agent.Ops.Service
        Krikit.Agent.Ops.Units
        Krikit.Agent.Ops.Effect.Log
        Krikit.Agent.Ops.Effect.Probe
        Krikit.Agent.Ops.Effect.Proc
        Krikit.Agent.Ops.Health.Run
        Krikit.Agent.Ops.Restart.Run
        Krikit.Agent.Ops.Smoke.Config
        Krikit.Agent.Ops.Smoke.Report
        Krikit.Agent.Ops.Smoke.Run
        Krikit.Agent.Ops.Smoke.Tier
        Krikit.Agent.Ops.Summary.Run
        Krikit.Agent.Ops.UpdateStatus.MacOS
        Krikit.Agent.Ops.UpdateStatus.Refresh
        Krikit.Agent.Ops.UpdateStatus.Report
        Krikit.Agent.Ops.UpdateStatus.Run
        Krikit.Agent.Ops.Regen.Banner
        Krikit.Agent.Ops.Regen.FsWalk
        Krikit.Agent.Ops.Regen.MarkdownExtract
        Krikit.Agent.Ops.Regen.Write
        Krikit.Agent.Ops.RepoInventory.Run
        Krikit.Agent.Ops.SystemStateMini.Run
        Krikit.Agent.Ops.Update.Run
        Krikit.Agent.Ops.Verify.Common
        Krikit.Agent.Ops.Verify.LlmChannelConsistency
        Krikit.Agent.Ops.Verify.ReadingOrder
        Krikit.Agent.Ops.Verify.RepoInventory
        Krikit.Agent.Ops.UpdateStatus.Tool
        Krikit.Agent.Ops.UpdateStatus.Version
        Krikit.Agent.Ops.Versions.Run
    hs-source-dirs:   src
    default-language: GHC2021

executable krikit-smoke
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app/smoke
    build-depends:
        , base                 ^>=4.22
        , bytestring           ^>=0.12
        , effectful            ^>=2.6
        , krikit-agent-ops
        , optparse-applicative ^>=0.19
        , text                 ^>=2.1
        , time                 >=1.12 && <1.15
    default-language: GHC2021

executable krikit-update-status
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app/update-status
    build-depends:
        , base                 ^>=4.22
        , effectful            ^>=2.6
        , krikit-agent-ops
        , optparse-applicative ^>=0.19
        , text                 ^>=2.1
    default-language: GHC2021

executable krikit-restart
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app/restart
    build-depends:
        , base                 ^>=4.22
        , effectful            ^>=2.6
        , krikit-agent-ops
        , optparse-applicative ^>=0.19
        , text                 ^>=2.1
    default-language: GHC2021

executable krikit-versions
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app/versions
    build-depends:
        , base                 ^>=4.22
        , effectful            ^>=2.6
        , krikit-agent-ops
        , text                 ^>=2.1
    default-language: GHC2021

executable krikit-summary
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app/summary
    build-depends:
        , base                 ^>=4.22
        , effectful            ^>=2.6
        , krikit-agent-ops
        , optparse-applicative ^>=0.19
        , text                 ^>=2.1
    default-language: GHC2021

executable krikit-health
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app/health
    build-depends:
        , base                 ^>=4.22
        , effectful            ^>=2.6
        , krikit-agent-ops
        , text                 ^>=2.1
    default-language: GHC2021

executable krikit-update
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app/update
    build-depends:
        , base                 ^>=4.22
        , effectful            ^>=2.6
        , krikit-agent-ops
        , optparse-applicative ^>=0.19
        , text                 ^>=2.1
    default-language: GHC2021

executable krikit-regen-system-state-mini
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app/regen-system-state-mini
    build-depends:
        , base                 ^>=4.22
        , effectful            ^>=2.6
        , krikit-agent-ops
        , optparse-applicative ^>=0.19
        , text                 ^>=2.1
    default-language: GHC2021

executable krikit-regen-repo-inventory
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app/regen-repo-inventory
    build-depends:
        , base                 ^>=4.22
        , effectful            ^>=2.6
        , krikit-agent-ops
        , optparse-applicative ^>=0.19
        , text                 ^>=2.1
    default-language: GHC2021

executable krikit-verify-repo-inventory
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app/verify-repo-inventory
    build-depends:
        , base                 ^>=4.22
        , effectful            ^>=2.6
        , krikit-agent-ops
        , optparse-applicative ^>=0.19
        , text                 ^>=2.1
    default-language: GHC2021

executable krikit-verify-reading-order
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app/verify-reading-order
    build-depends:
        , base                 ^>=4.22
        , effectful            ^>=2.6
        , krikit-agent-ops
        , optparse-applicative ^>=0.19
        , text                 ^>=2.1
    default-language: GHC2021

executable krikit-verify-llm-channel-consistency
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app/verify-llm-channel-consistency
    build-depends:
        , base                 ^>=4.22
        , effectful            ^>=2.6
        , krikit-agent-ops
        , optparse-applicative ^>=0.19
        , text                 ^>=2.1
    default-language: GHC2021

test-suite krikit-agent-ops-test
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:
        Krikit.Agent.Ops.ConfigSpec
        Krikit.Agent.Ops.Regen.MarkdownExtractSpec
        Krikit.Agent.Ops.Regen.WriteSpec
        Krikit.Agent.Ops.RepoInventory.RunSpec
        Krikit.Agent.Ops.Verify.CommonSpec
        Krikit.Agent.Ops.Verify.LlmChannelConsistencySpec
        Krikit.Agent.Ops.Verify.ReadingOrderSpec
        Krikit.Agent.Ops.Verify.RepoInventorySpec
        Krikit.Agent.Ops.Smoke.RunSpec
        Krikit.Agent.Ops.Smoke.TierSpec
        Krikit.Agent.Ops.UpdateStatus.MacOSSpec
        Krikit.Agent.Ops.UpdateStatus.RunSpec
        Krikit.Agent.Ops.UpdateStatus.VersionSpec
    build-depends:
        , base              ^>=4.22
        , containers        >=0.6  && <0.9
        , directory         ^>=1.3
        , effectful         ^>=2.6
        , filepath          ^>=1.5
        , hspec             ^>=2.11
        , krikit-agent-ops
        , text              ^>=2.1
    default-language: GHC2021
